# ipify-rs

./: .cirrus.yml  .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: develop.yml  rust.yml
examples/: async.rs  showall.rs
src/: lib.rs  main.rs
tests/: cli-opts.rs
