[package]
name = "ipify-rs"
version = "0.5.1"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
keywords = ["ipify", "api", "client"]
repository = "https://github.com/keltia/ipify-rs"
license = "MIT"
readme = "README.md"
description = "Rust crate for the ipify.org API."
documentation = "https://docs.rs/ipify-rs"
categories = [ "api-bindings", "command-line-utilities" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
stderrlog = "0.5"
