[package]
name = "ipify-rs"
version = "0.6.2"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
keywords = ["ipify", "api", "client"]
repository = "https://github.com/keltia/ipify-rs"
license = "MIT"
readme = "README.md"
description = "Rust crate for the ipify.org API."
documentation = "https://docs.rs/ipify-rs"
categories = ["api-bindings", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7"
log = "0.4"
stderrlog = "0.6"
